Se creó la base de lo que será la resistencia, falta plasmar bien la dirección a nivel gráfico y la polaridad.